Commit data_processing file

--- a/notebooks/data_preprocessing.ipynb
+++ b/notebooks/data_preprocessing.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 47,
       "metadata": {
         "id": "lpXroyHzYAqc"
       },
@@ -16,7 +16,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 48,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -158,7 +158,7 @@
               "4         0.0                    0      1  "
             ]
           },
-          "execution_count": 4,
+          "execution_count": 48,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -171,7 +171,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 49,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -198,7 +198,7 @@
               "dtype: int64"
             ]
           },
-          "execution_count": 5,
+          "execution_count": 49,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -209,21 +209,19 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
-      "metadata": {
-        "id": "jxW0wILBad78"
-      },
+      "execution_count": 50,
+      "metadata": {},
       "outputs": [],
       "source": [
         "# Обробка відсутніх значень\n",
         "df_churn['reamining_contract'] = df_churn['reamining_contract'].fillna(0)\n",
-        "df_churn['download_avg'] = df_churn['download_avg'].fillna(0)\n",
-        "df_churn['upload_avg'] = df_churn['upload_avg'].fillna(0)"
+        "df_churn['download_avg'] = df_churn['download_avg'].fillna(df_churn['download_avg'].median())\n",
+        "df_churn['upload_avg'] = df_churn['upload_avg'].fillna(df_churn['upload_avg'].median())"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 51,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -250,7 +248,7 @@
               "dtype: int64"
             ]
           },
-          "execution_count": 7,
+          "execution_count": 51,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -261,7 +259,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 52,
       "metadata": {
         "id": "4xJZgpY8dsox"
       },
@@ -281,6 +279,18 @@
         "df_churn['download_avg'] = np.where(df_churn['download_avg'] > upper, upper,\n",
         "                       np.where(df_churn['download_avg'] < lower, lower, df_churn['download_avg']))\n",
         "\n",
+        "\n",
+        "# Обмеження викидів у upload_avg за допомогою IQR\n",
+        "Q1 = df_churn['upload_avg'].quantile(0.25)\n",
+        "Q3 = df_churn['upload_avg'].quantile(0.75)\n",
+        "IQR = Q3 - Q1\n",
+        "lower = Q1 - 1.5 * IQR\n",
+        "upper = Q3 + 1.5 * IQR\n",
+        "\n",
+        "df_churn['upload_avg'] = np.where(df_churn['upload_avg'] > upper, upper,\n",
+        "                         np.where(df_churn['upload_avg'] < lower, lower, df_churn['upload_avg']))\n",
+        "\n",
+        "\n",
         "# Видалення екстремальних значень bill_avg\n",
         "bill_upper = df_churn['bill_avg'].quantile(0.99)\n",
         "df_churn = df_churn[df_churn['bill_avg'] <= bill_upper]"
@@ -288,7 +298,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 53,
       "metadata": {
         "id": "84qry6zIkGeS"
       },
@@ -301,7 +311,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 54,
       "metadata": {
         "id": "i99PC_RZe8-u"
       },
@@ -316,7 +326,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 55,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -377,8 +387,8 @@
               "      <td>0.757921</td>\n",
               "      <td>-0.544562</td>\n",
               "      <td>-0.334731</td>\n",
-              "      <td>-0.775141</td>\n",
-              "      <td>-0.189118</td>\n",
+              "      <td>-0.781388</td>\n",
+              "      <td>-0.265647</td>\n",
               "      <td>0</td>\n",
               "      <td>True</td>\n",
               "      <td>False</td>\n",
@@ -398,8 +408,8 @@
               "      <td>-2.007430</td>\n",
               "      <td>-0.753378</td>\n",
               "      <td>-0.334731</td>\n",
-              "      <td>-0.986643</td>\n",
-              "      <td>-0.455279</td>\n",
+              "      <td>-0.993761</td>\n",
+              "      <td>-0.957871</td>\n",
               "      <td>1</td>\n",
               "      <td>True</td>\n",
               "      <td>False</td>\n",
@@ -419,8 +429,8 @@
               "      <td>-0.237605</td>\n",
               "      <td>-0.753378</td>\n",
               "      <td>-0.334731</td>\n",
-              "      <td>-0.641693</td>\n",
-              "      <td>-0.351129</td>\n",
+              "      <td>-0.647390</td>\n",
+              "      <td>-0.687001</td>\n",
               "      <td>1</td>\n",
               "      <td>True</td>\n",
               "      <td>False</td>\n",
@@ -440,8 +450,8 @@
               "      <td>0.315465</td>\n",
               "      <td>-0.753378</td>\n",
               "      <td>0.910740</td>\n",
-              "      <td>-0.986643</td>\n",
-              "      <td>-0.455279</td>\n",
+              "      <td>-0.993761</td>\n",
+              "      <td>-0.957871</td>\n",
               "      <td>1</td>\n",
               "      <td>True</td>\n",
               "      <td>False</td>\n",
@@ -461,8 +471,8 @@
               "      <td>-2.007430</td>\n",
               "      <td>-0.753378</td>\n",
               "      <td>-0.334731</td>\n",
-              "      <td>-0.986643</td>\n",
-              "      <td>-0.455279</td>\n",
+              "      <td>-0.993761</td>\n",
+              "      <td>-0.957871</td>\n",
               "      <td>1</td>\n",
               "      <td>True</td>\n",
               "      <td>False</td>\n",
@@ -486,18 +496,18 @@
               "4  34                 0                            0          1.936361   \n",
               "\n",
               "   bill_avg  reamining_contract  service_failure_count  download_avg  \\\n",
-              "0  0.757921           -0.544562              -0.334731     -0.775141   \n",
-              "1 -2.007430           -0.753378              -0.334731     -0.986643   \n",
-              "2 -0.237605           -0.753378              -0.334731     -0.641693   \n",
-              "3  0.315465           -0.753378               0.910740     -0.986643   \n",
-              "4 -2.007430           -0.753378              -0.334731     -0.986643   \n",
+              "0  0.757921           -0.544562              -0.334731     -0.781388   \n",
+              "1 -2.007430           -0.753378              -0.334731     -0.993761   \n",
+              "2 -0.237605           -0.753378              -0.334731     -0.647390   \n",
+              "3  0.315465           -0.753378               0.910740     -0.993761   \n",
+              "4 -2.007430           -0.753378              -0.334731     -0.993761   \n",
               "\n",
               "   upload_avg  churn  download_over_limit_0  download_over_limit_1  \\\n",
-              "0   -0.189118      0                   True                  False   \n",
-              "1   -0.455279      1                   True                  False   \n",
-              "2   -0.351129      1                   True                  False   \n",
-              "3   -0.455279      1                   True                  False   \n",
-              "4   -0.455279      1                   True                  False   \n",
+              "0   -0.265647      0                   True                  False   \n",
+              "1   -0.957871      1                   True                  False   \n",
+              "2   -0.687001      1                   True                  False   \n",
+              "3   -0.957871      1                   True                  False   \n",
+              "4   -0.957871      1                   True                  False   \n",
               "\n",
               "   download_over_limit_2  download_over_limit_3  download_over_limit_4  \\\n",
               "0                  False                  False                  False   \n",
@@ -514,7 +524,7 @@
               "4                  False                  False                  False  "
             ]
           },
-          "execution_count": 11,
+          "execution_count": 55,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -525,7 +535,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 56,
       "metadata": {
         "id": "EZ92j_o7kf9i"
       },
@@ -537,7 +547,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 57,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -594,8 +604,8 @@
               "      <td>4.669609</td>\n",
               "      <td>-0.544562</td>\n",
               "      <td>-0.334731</td>\n",
-              "      <td>-0.775141</td>\n",
-              "      <td>-0.189118</td>\n",
+              "      <td>-0.781388</td>\n",
+              "      <td>-0.265647</td>\n",
               "      <td>0</td>\n",
               "      <td>True</td>\n",
               "      <td>False</td>\n",
@@ -613,8 +623,8 @@
               "      <td>2.835973</td>\n",
               "      <td>-0.753378</td>\n",
               "      <td>-0.334731</td>\n",
-              "      <td>-0.986643</td>\n",
-              "      <td>-0.455279</td>\n",
+              "      <td>-0.993761</td>\n",
+              "      <td>-0.957871</td>\n",
               "      <td>1</td>\n",
               "      <td>True</td>\n",
               "      <td>False</td>\n",
@@ -632,8 +642,8 @@
               "      <td>3.175171</td>\n",
               "      <td>-0.753378</td>\n",
               "      <td>-0.334731</td>\n",
-              "      <td>-0.641693</td>\n",
-              "      <td>-0.351129</td>\n",
+              "      <td>-0.647390</td>\n",
+              "      <td>-0.687001</td>\n",
               "      <td>1</td>\n",
               "      <td>True</td>\n",
               "      <td>False</td>\n",
@@ -651,8 +661,8 @@
               "      <td>2.172325</td>\n",
               "      <td>-0.753378</td>\n",
               "      <td>0.910740</td>\n",
-              "      <td>-0.986643</td>\n",
-              "      <td>-0.455279</td>\n",
+              "      <td>-0.993761</td>\n",
+              "      <td>-0.957871</td>\n",
               "      <td>1</td>\n",
               "      <td>True</td>\n",
               "      <td>False</td>\n",
@@ -670,8 +680,8 @@
               "      <td>1.936361</td>\n",
               "      <td>-0.753378</td>\n",
               "      <td>-0.334731</td>\n",
-              "      <td>-0.986643</td>\n",
-              "      <td>-0.455279</td>\n",
+              "      <td>-0.993761</td>\n",
+              "      <td>-0.957871</td>\n",
               "      <td>1</td>\n",
               "      <td>True</td>\n",
               "      <td>False</td>\n",
@@ -695,11 +705,11 @@
               "4                 0                            0          1.936361   \n",
               "\n",
               "   reamining_contract  service_failure_count  download_avg  upload_avg  churn  \\\n",
-              "0           -0.544562              -0.334731     -0.775141   -0.189118      0   \n",
-              "1           -0.753378              -0.334731     -0.986643   -0.455279      1   \n",
-              "2           -0.753378              -0.334731     -0.641693   -0.351129      1   \n",
-              "3           -0.753378               0.910740     -0.986643   -0.455279      1   \n",
-              "4           -0.753378              -0.334731     -0.986643   -0.455279      1   \n",
+              "0           -0.544562              -0.334731     -0.781388   -0.265647      0   \n",
+              "1           -0.753378              -0.334731     -0.993761   -0.957871      1   \n",
+              "2           -0.753378              -0.334731     -0.647390   -0.687001      1   \n",
+              "3           -0.753378               0.910740     -0.993761   -0.957871      1   \n",
+              "4           -0.753378              -0.334731     -0.993761   -0.957871      1   \n",
               "\n",
               "   download_over_limit_0  download_over_limit_1  download_over_limit_2  \\\n",
               "0                   True                  False                  False   \n",
@@ -723,7 +733,7 @@
               "4                  False                  False  "
             ]
           },
-          "execution_count": 13,
+          "execution_count": 57,
           "metadata": {},
           "output_type": "execute_result"
         }
