--- a/notebooks/churn.ipynb
+++ b/notebooks/churn.ipynb
@@ -1380,18 +1380,18 @@
     "\n",
     "# Віджет для завантаження файлу\n",
     "uploader = widgets.FileUpload(\n",
-    "    accept='.csv',\n",
-    "    multiple=False,\n",
-    "    description='Завантажити CSV'\n",
+    "    accept=\".csv\", multiple=False, description=\"Завантажити CSV\"\n",
     ")\n",
     "\n",
     "# Функція для обробки завантаженого файлу\n",
+    "\n",
+    "\n",
     "def explore_dataset(change):\n",
     "    try:\n",
     "        if uploader.value:\n",
     "            uploaded_file = list(uploader.value.values())[0]\n",
     "            global df\n",
-    "            df = pd.read_csv(io.BytesIO(uploaded_file['content']))\n",
+    "            df = pd.read_csv(io.BytesIO(uploaded_file[\"content\"]))\n",
     "\n",
     "            # 1. Перегляд перших рядків\n",
     "            print(\"\\nПерші 5 рядків датасету:\")\n",
@@ -1406,7 +1406,7 @@
     "            missing = df.isnull().sum()\n",
     "            display(missing)\n",
     "            print(\"\\nВідтік серед пропущених значень у reamining_contract:\")\n",
-    "            display(df[df['reamining_contract'].isnull()]['churn'].mean())\n",
+    "            display(df[df[\"reamining_contract\"].isnull()][\"churn\"].mean())\n",
     "\n",
     "            # 4. Базові статистики для числових стовпців\n",
     "            print(\"\\nОпис числових стовпців:\")\n",
@@ -1414,25 +1414,30 @@
     "\n",
     "            # 5. Баланс класів у churn\n",
     "            print(\"\\nБаланс класів у churn:\")\n",
-    "            display(df['churn'].value_counts(normalize=True))\n",
+    "            display(df[\"churn\"].value_counts(normalize=True))\n",
     "            plt.figure(figsize=(6, 4))\n",
-    "            sns.countplot(x='churn', data=df)\n",
-    "            plt.title('Баланс класів у churn')\n",
+    "            sns.countplot(x=\"churn\", data=df)\n",
+    "            plt.title(\"Баланс класів у churn\")\n",
     "            plt.show()\n",
     "\n",
     "            # 6. Розподіл числових змінних\n",
-    "            numeric_cols = ['subscription_age', 'bill_avg', 'download_avg', 'upload_avg']\n",
+    "            numeric_cols = [\n",
+    "                \"subscription_age\",\n",
+    "                \"bill_avg\",\n",
+    "                \"download_avg\",\n",
+    "                \"upload_avg\",\n",
+    "            ]\n",
     "            for col in numeric_cols:\n",
     "                plt.figure(figsize=(8, 5))\n",
-    "                sns.histplot(data=df, x=col, hue='churn', kde=True)\n",
-    "                plt.title(f'Розподіл {col} за churn')\n",
+    "                sns.histplot(data=df, x=col, hue=\"churn\", kde=True)\n",
+    "                plt.title(f\"Розподіл {col} за churn\")\n",
     "                plt.show()\n",
     "\n",
     "            # 7. Кореляційна матриця\n",
     "            print(\"\\nКореляційна матриця:\")\n",
     "            plt.figure(figsize=(10, 8))\n",
-    "            sns.heatmap(df.corr(), annot=True, cmap='coolwarm', fmt='.2f')\n",
-    "            plt.title('Кореляційна матриця')\n",
+    "            sns.heatmap(df.corr(), annot=True, cmap=\"coolwarm\", fmt=\".2f\")\n",
+    "            plt.title(\"Кореляційна матриця\")\n",
     "            plt.show()\n",
     "\n",
     "            # 8. Виявлення викидів через IQR\n",
@@ -1440,48 +1445,63 @@
     "                Q1 = df[col].quantile(0.25)\n",
     "                Q3 = df[col].quantile(0.75)\n",
     "                IQR = Q3 - Q1\n",
-    "                outliers = df[(df[col] < Q1 - 1.5*IQR) | (df[col] > Q3 + 1.5*IQR)]\n",
+    "                outliers = df[(df[col] < Q1 - 1.5 * IQR) | (df[col] > Q3 + 1.5 * IQR)]\n",
     "                print(f\"\\nКількість викидів у {col}: {len(outliers)}\")\n",
-    "                print(f\"Частка churn=1 серед викидів у {col}: {outliers['churn'].mean():.2f}\")\n",
+    "                print(\n",
+    "                    f\"Частка churn=1 серед викидів у {col}: {outliers['churn'].mean():.2f}\"\n",
+    "                )\n",
     "                plt.figure(figsize=(8, 5))\n",
-    "                sns.boxplot(x='churn', y=col, data=df)\n",
-    "                plt.title(f'Boxplot для {col} за churn')\n",
+    "                sns.boxplot(x=\"churn\", y=col, data=df)\n",
+    "                plt.title(f\"Boxplot для {col} за churn\")\n",
     "                plt.show()\n",
     "\n",
     "            # 9. Перевірка від’ємних subscription_age\n",
-    "            negative_age = df[df['subscription_age'] < 0]\n",
-    "            print(\"\\nКількість рядків із від’ємним subscription_age:\", len(negative_age))\n",
-    "            print(\"Приклади:\", negative_age[['subscription_age', 'churn']].head())\n",
+    "            negative_age = df[df[\"subscription_age\"] < 0]\n",
+    "            print(\n",
+    "                \"\\nКількість рядків із від’ємним subscription_age:\", len(negative_age)\n",
+    "            )\n",
+    "            print(\"Приклади:\", negative_age[[\"subscription_age\", \"churn\"]].head())\n",
     "\n",
     "            # 10. Групи за reamining_contract\n",
-    "            df['contract_group'] = pd.cut(df['reamining_contract'],\n",
-    "                                          bins=[-float('inf'), 0, 1, float('inf')],\n",
-    "                                          labels=['Без контракту', 'До 1 року', 'Понад 1 рік'])\n",
+    "            df[\"contract_group\"] = pd.cut(\n",
+    "                df[\"reamining_contract\"],\n",
+    "                bins=[-float(\"inf\"), 0, 1, float(\"inf\")],\n",
+    "                labels=[\"Без контракту\", \"До 1 року\", \"Понад 1 рік\"],\n",
+    "            )\n",
     "            print(\"\\nВідтік за групами контракту:\")\n",
-    "            contract_churn = df.groupby('contract_group', observed=True)['churn'].mean()\n",
+    "            contract_churn = df.groupby(\"contract_group\", observed=True)[\"churn\"].mean()\n",
     "            display(contract_churn)\n",
     "            plt.figure(figsize=(8, 5))\n",
-    "            sns.barplot(x='churn', y='contract_group', data=df)\n",
-    "            plt.title('Відтік за групами контракту')\n",
+    "            sns.barplot(x=\"churn\", y=\"contract_group\", data=df)\n",
+    "            plt.title(\"Відтік за групами контракту\")\n",
     "            plt.show()\n",
     "\n",
     "            # 11. Комбінація TV і movie підписки\n",
-    "            df['tv_and_movie'] = (df['is_tv_subscriber'] & df['is_movie_package_subscriber']).astype(int)\n",
+    "            df[\"tv_and_movie\"] = (\n",
+    "                df[\"is_tv_subscriber\"] & df[\"is_movie_package_subscriber\"]\n",
+    "            ).astype(int)\n",
     "            print(\"\\nВідтік за комбінацією TV і movie:\")\n",
-    "            tv_movie_churn = df.groupby('tv_and_movie')['churn'].mean()\n",
+    "            tv_movie_churn = df.groupby(\"tv_and_movie\")[\"churn\"].mean()\n",
     "            display(tv_movie_churn)\n",
     "            plt.figure(figsize=(6, 4))\n",
-    "            sns.barplot(x='churn', y='tv_and_movie', data=df)\n",
-    "            plt.title('Відтік за комбінацією TV і movie')\n",
+    "            sns.barplot(x=\"churn\", y=\"tv_and_movie\", data=df)\n",
+    "            plt.title(\"Відтік за комбінацією TV і movie\")\n",
     "            plt.show()\n",
     "\n",
     "            # 12. Вплив service_failure_count\n",
     "            print(\"\\nВідтік за кількістю збоїв:\")\n",
-    "            service_failure_churn = df.groupby(pd.cut(df['service_failure_count'], bins=[-1, 0, 1, float('inf')]), observed=True)['churn'].mean()\n",
+    "            service_failure_churn = df.groupby(\n",
+    "                pd.cut(df[\"service_failure_count\"], bins=[-1, 0, 1, float(\"inf\")]),\n",
+    "                observed=True,\n",
+    "            )[\"churn\"].mean()\n",
     "            display(service_failure_churn)\n",
     "            plt.figure(figsize=(8, 5))\n",
-    "            sns.barplot(x='churn', y=pd.cut(df['service_failure_count'], bins=[-1, 0, 1, float('inf')]), data=df)\n",
-    "            plt.title('Відтік за кількістю збоїв')\n",
+    "            sns.barplot(\n",
+    "                x=\"churn\",\n",
+    "                y=pd.cut(df[\"service_failure_count\"], bins=[-1, 0, 1, float(\"inf\")]),\n",
+    "                data=df,\n",
+    "            )\n",
+    "            plt.title(\"Відтік за кількістю збоїв\")\n",
     "            plt.show()\n",
     "\n",
     "        else:\n",
@@ -1489,8 +1509,9 @@
     "    except Exception as e:\n",
     "        print(f\"Помилка: {e}\")\n",
     "\n",
+    "\n",
     "# Прив'язуємо функцію до віджета\n",
-    "uploader.observe(explore_dataset, names='value')\n",
+    "uploader.observe(explore_dataset, names=\"value\")\n",
     "display(uploader)"
    ]
   },
